// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInput matches the snapshot (Disabled) 1`] = `
.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c6:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c6 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c7 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c7:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c7:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c7:hover,
.c7[aria-expanded='true'] {
  background-color: #DBDEE1;
  border-color: transparent;
  color: #1B1C1E;
}

.c7:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
}

.c7 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c10 {
  height: 1.25rem;
  position: absolute;
  width: 1rem;
}

.c10::before {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c10::after {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c8 {
  background-color: #60666E;
  border: 1px solid #FFFFFF;
  border-radius: var(--border-radius-half);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #FFFFFF;
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  margin: 0;
  max-width: 327px;
  min-height: 24px;
  padding: 1px var(--spacing-1x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c8[data-popper-placement*="bottom"] > .c9 {
  height: 1rem;
  left: 0;
  margin-top: -0.375rem;
  top: 0;
  width: 1rem;
}

.c8[data-popper-placement*="bottom"] > .c9::before {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.5rem;
  position: absolute;
  top: -2px;
}

.c8[data-popper-placement*="bottom"] > .c9::after {
  border-color: transparent transparent #60666E transparent;
  border-width: 0 0.5rem 0.5rem;
}

.c8[data-popper-placement*="top"] > .c9 {
  bottom: 0;
  height: 0;
  left: 0;
  margin-bottom: 0;
  width: 1rem;
}

.c8[data-popper-placement*="top"] > .c9::before {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  position: absolute;
  top: 0;
}

.c8[data-popper-placement*="top"] > .c9::after {
  border-color: #60666E transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  top: -0.1rem;
}

.c8[data-popper-placement*="right"] > .c9 {
  height: 1rem;
  left: 0;
  margin-left: -0.8rem;
  width: 1rem;
}

.c8[data-popper-placement*="right"] > .c9::before {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
}

.c8[data-popper-placement*="right"] > .c9::after {
  border-color: transparent #60666E transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
  left: 0.375rem;
  top: 0;
}

.c8[data-popper-placement*="left"] > .c9 {
  height: 1rem;
  margin-right: -0.7rem;
  right: -1px;
  width: 1rem;
}

.c8[data-popper-placement*="left"] > .c9::before {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.5rem;
}

.c8[data-popper-placement*="left"] > .c9::after {
  border-color: transparent transparent transparent #60666E;
  border-width: 0.5rem 0 0.5rem 0.5rem;
  left: 0.17rem;
  top: 0;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c5:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c5:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0:focus {
  border-color: #006296;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-half);
}

.c2 {
  background: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding: 0 var(--spacing-1x);
  width: 100%;
}

.c2::-webkit-input-placeholder {
  color: #60666E;
}

.c2::-moz-placeholder {
  color: #60666E;
}

.c2:-ms-input-placeholder {
  color: #60666E;
}

.c2::placeholder {
  color: #60666E;
}

.c2:disabled {
  background-color: #F1F2F2;
  border-color: #DBDEE1;
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2:disabled::-moz-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2:disabled::placeholder {
  color: #B7BBC2;
}

.c2:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  padding-right: var(--size-2x);
}

.c4 {
  position: absolute;
  right: 0;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      aria-invalid="false"
      autocomplete="current-password"
      class="c2 c3"
      data-testid="password-input"
      disabled=""
      id="uuid1"
      name="password"
      type="password"
      value="Pass123"
    />
    <div
      class="c4"
    >
      <span
        aria-describedby="uuid2"
        class="c5"
        data-testid="tooltip"
        id="tooltip-trigger-uuid2"
        tabindex="-1"
      >
        <button
          aria-label="Show password in plain text."
          aria-pressed="false"
          class="c6 c7"
          data-testid="show-password-button"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            color="currentColor"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </span>
      <div
        aria-hidden="true"
        class="c8"
        data-popper-interactive="false"
        data-testid="tooltip-content-container"
        id="uuid2"
        role="tooltip"
        style="position:absolute;left:0;top:0"
      >
        <div
          class="c9 c10"
          data-popper-arrow="true"
          style="position:absolute"
        />
        <div
          class="c11"
        >
          Show password in plain text.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PasswordInput matches the snapshot (Invalid) 1`] = `
.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c8:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c8:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c8 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c9 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c9:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c9:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c9:hover,
.c9[aria-expanded='true'] {
  background-color: #DBDEE1;
  border-color: transparent;
  color: #1B1C1E;
}

.c9:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
}

.c9 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c1 {
  color: #CD2C23;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
}

.c2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: var(--spacing-base);
}

.c12 {
  height: 1.25rem;
  position: absolute;
  width: 1rem;
}

.c12::before {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c12::after {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c10 {
  background-color: #60666E;
  border: 1px solid #FFFFFF;
  border-radius: var(--border-radius-half);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #FFFFFF;
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  margin: 0;
  max-width: 327px;
  min-height: 24px;
  padding: 1px var(--spacing-1x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c10[data-popper-placement*="bottom"] > .c11 {
  height: 1rem;
  left: 0;
  margin-top: -0.375rem;
  top: 0;
  width: 1rem;
}

.c10[data-popper-placement*="bottom"] > .c11::before {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.5rem;
  position: absolute;
  top: -2px;
}

.c10[data-popper-placement*="bottom"] > .c11::after {
  border-color: transparent transparent #60666E transparent;
  border-width: 0 0.5rem 0.5rem;
}

.c10[data-popper-placement*="top"] > .c11 {
  bottom: 0;
  height: 0;
  left: 0;
  margin-bottom: 0;
  width: 1rem;
}

.c10[data-popper-placement*="top"] > .c11::before {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  position: absolute;
  top: 0;
}

.c10[data-popper-placement*="top"] > .c11::after {
  border-color: #60666E transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  top: -0.1rem;
}

.c10[data-popper-placement*="right"] > .c11 {
  height: 1rem;
  left: 0;
  margin-left: -0.8rem;
  width: 1rem;
}

.c10[data-popper-placement*="right"] > .c11::before {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
}

.c10[data-popper-placement*="right"] > .c11::after {
  border-color: transparent #60666E transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
  left: 0.375rem;
  top: 0;
}

.c10[data-popper-placement*="left"] > .c11 {
  height: 1rem;
  margin-right: -0.7rem;
  right: -1px;
  width: 1rem;
}

.c10[data-popper-placement*="left"] > .c11::before {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.5rem;
}

.c10[data-popper-placement*="left"] > .c11::after {
  border-color: transparent transparent transparent #60666E;
  border-width: 0.5rem 0 0.5rem 0.5rem;
  left: 0.17rem;
  top: 0;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c7:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c7:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #CD2C23;
}

.c0:focus {
  border-color: #CD2C23;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-half);
}

.c4 {
  background: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding: 0 var(--spacing-1x);
  width: 100%;
}

.c4::-webkit-input-placeholder {
  color: #60666E;
}

.c4::-moz-placeholder {
  color: #60666E;
}

.c4:-ms-input-placeholder {
  color: #60666E;
}

.c4::placeholder {
  color: #60666E;
}

.c4:disabled {
  background-color: #F1F2F2;
  border-color: #DBDEE1;
}

.c4:disabled,
.c4:disabled::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c4:disabled,
.c4:disabled::-moz-placeholder {
  color: #B7BBC2;
}

.c4:disabled,
.c4:disabled:-ms-input-placeholder {
  color: #B7BBC2;
}

.c4:disabled,
.c4:disabled::placeholder {
  color: #B7BBC2;
}

.c4:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c4:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  padding-right: var(--size-2x);
}

.c6 {
  position: absolute;
  right: 0;
}

<div
  class="c0"
>
  <span
    aria-live="polite"
    class="c1"
    data-testid="invalid-field"
    id="uuid1_invalid"
    role="alert"
  >
    <svg
      class="c2"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
    This is an error message
  </span>
  <div
    class="c3"
  >
    <input
      aria-invalid="true"
      autocomplete="current-password"
      class="c4 c5"
      data-testid="password-input"
      id="uuid1"
      name="password"
      type="password"
      value="Pass123"
    />
    <div
      class="c6"
    >
      <span
        aria-describedby="uuid2"
        class="c7"
        data-testid="tooltip"
        id="tooltip-trigger-uuid2"
        tabindex="-1"
      >
        <button
          aria-label="Show password in plain text."
          aria-pressed="false"
          class="c8 c9"
          data-testid="show-password-button"
          type="button"
        >
          <svg
            aria-hidden="true"
            color="currentColor"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </span>
      <div
        aria-hidden="true"
        class="c10"
        data-popper-interactive="false"
        data-testid="tooltip-content-container"
        id="uuid2"
        role="tooltip"
        style="position:absolute;left:0;top:0"
      >
        <div
          class="c11 c12"
          data-popper-arrow="true"
          style="position:absolute"
        />
        <div
          class="c13"
        >
          Show password in plain text.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PasswordInput matches the snapshot (Normal) 1`] = `
.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c6:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c6 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c7 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c7:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c7:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c7:hover,
.c7[aria-expanded='true'] {
  background-color: #DBDEE1;
  border-color: transparent;
  color: #1B1C1E;
}

.c7:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
}

.c7 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c10 {
  height: 1.25rem;
  position: absolute;
  width: 1rem;
}

.c10::before {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c10::after {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c8 {
  background-color: #60666E;
  border: 1px solid #FFFFFF;
  border-radius: var(--border-radius-half);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #FFFFFF;
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  margin: 0;
  max-width: 327px;
  min-height: 24px;
  padding: 1px var(--spacing-1x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c8[data-popper-placement*="bottom"] > .c9 {
  height: 1rem;
  left: 0;
  margin-top: -0.375rem;
  top: 0;
  width: 1rem;
}

.c8[data-popper-placement*="bottom"] > .c9::before {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.5rem;
  position: absolute;
  top: -2px;
}

.c8[data-popper-placement*="bottom"] > .c9::after {
  border-color: transparent transparent #60666E transparent;
  border-width: 0 0.5rem 0.5rem;
}

.c8[data-popper-placement*="top"] > .c9 {
  bottom: 0;
  height: 0;
  left: 0;
  margin-bottom: 0;
  width: 1rem;
}

.c8[data-popper-placement*="top"] > .c9::before {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  position: absolute;
  top: 0;
}

.c8[data-popper-placement*="top"] > .c9::after {
  border-color: #60666E transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  top: -0.1rem;
}

.c8[data-popper-placement*="right"] > .c9 {
  height: 1rem;
  left: 0;
  margin-left: -0.8rem;
  width: 1rem;
}

.c8[data-popper-placement*="right"] > .c9::before {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
}

.c8[data-popper-placement*="right"] > .c9::after {
  border-color: transparent #60666E transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
  left: 0.375rem;
  top: 0;
}

.c8[data-popper-placement*="left"] > .c9 {
  height: 1rem;
  margin-right: -0.7rem;
  right: -1px;
  width: 1rem;
}

.c8[data-popper-placement*="left"] > .c9::before {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.5rem;
}

.c8[data-popper-placement*="left"] > .c9::after {
  border-color: transparent transparent transparent #60666E;
  border-width: 0.5rem 0 0.5rem 0.5rem;
  left: 0.17rem;
  top: 0;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c5:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c5:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0:focus {
  border-color: #006296;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-half);
}

.c2 {
  background: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding: 0 var(--spacing-1x);
  width: 100%;
}

.c2::-webkit-input-placeholder {
  color: #60666E;
}

.c2::-moz-placeholder {
  color: #60666E;
}

.c2:-ms-input-placeholder {
  color: #60666E;
}

.c2::placeholder {
  color: #60666E;
}

.c2:disabled {
  background-color: #F1F2F2;
  border-color: #DBDEE1;
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2:disabled::-moz-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2:disabled::placeholder {
  color: #B7BBC2;
}

.c2:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  padding-right: var(--size-2x);
}

.c4 {
  position: absolute;
  right: 0;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      aria-invalid="false"
      autocomplete="current-password"
      class="c2 c3"
      data-testid="password-input"
      id="uuid1"
      name="password"
      type="password"
      value="Pass123"
    />
    <div
      class="c4"
    >
      <span
        aria-describedby="uuid2"
        class="c5"
        data-testid="tooltip"
        id="tooltip-trigger-uuid2"
        tabindex="-1"
      >
        <button
          aria-label="Show password in plain text."
          aria-pressed="false"
          class="c6 c7"
          data-testid="show-password-button"
          type="button"
        >
          <svg
            aria-hidden="true"
            color="currentColor"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </span>
      <div
        aria-hidden="true"
        class="c8"
        data-popper-interactive="false"
        data-testid="tooltip-content-container"
        id="uuid2"
        role="tooltip"
        style="position:absolute;left:0;top:0"
      >
        <div
          class="c9 c10"
          data-popper-arrow="true"
          style="position:absolute"
        />
        <div
          class="c11"
        >
          Show password in plain text.
        </div>
      </div>
    </div>
  </div>
</div>
`;
